@@ -1,0 +1,90 @@
+PREHOOK: query: DESCRIBE FUNCTION concat_ws
+PREHOOK: type: DESCFUNCTION
+POSTHOOK: query: DESCRIBE FUNCTION concat_ws
+POSTHOOK: type: DESCFUNCTION
+concat_ws(separator, str1, str2, ...) - returns the concatenation of the strings separated by the separator.
+PREHOOK: query: DESCRIBE FUNCTION EXTENDED concat_ws
+PREHOOK: type: DESCFUNCTION
+POSTHOOK: query: DESCRIBE FUNCTION EXTENDED concat_ws
+POSTHOOK: type: DESCFUNCTION
+concat_ws(separator, str1, str2, ...) - returns the concatenation of the strings separated by the separator.
+Example:
+  > SELECT concat_ws('ce', 'fa', 'book') FROM src LIMIT 1;
+  'facebook'
+PREHOOK: query: CREATE TABLE dest1(c1 STRING, c2 STRING, c3 STRING)
+PREHOOK: type: CREATETABLE
+POSTHOOK: query: CREATE TABLE dest1(c1 STRING, c2 STRING, c3 STRING)
+POSTHOOK: type: CREATETABLE
+POSTHOOK: Output: default@dest1
+PREHOOK: query: FROM src INSERT OVERWRITE TABLE dest1 SELECT 'abc', 'xyz', '8675309'  WHERE src.key = 86
+PREHOOK: type: QUERY
+PREHOOK: Input: default@src
+PREHOOK: Output: default@dest1
+POSTHOOK: query: FROM src INSERT OVERWRITE TABLE dest1 SELECT 'abc', 'xyz', '8675309'  WHERE src.key = 86
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@src
+POSTHOOK: Output: default@dest1
+PREHOOK: query: EXPLAIN
+SELECT concat_ws(dest1.c1, dest1.c2, dest1.c3),
+       concat_ws(',', dest1.c1, dest1.c2, dest1.c3),
+       concat_ws(NULL, dest1.c1, dest1.c2, dest1.c3),
+       concat_ws('**', dest1.c1, NULL, dest1.c3) FROM dest1
+PREHOOK: type: QUERY
+POSTHOOK: query: EXPLAIN
+SELECT concat_ws(dest1.c1, dest1.c2, dest1.c3),
+       concat_ws(',', dest1.c1, dest1.c2, dest1.c3),
+       concat_ws(NULL, dest1.c1, dest1.c2, dest1.c3),
+       concat_ws('**', dest1.c1, NULL, dest1.c3) FROM dest1
+POSTHOOK: type: QUERY
+ABSTRACT SYNTAX TREE:
+  (TOK_QUERY (TOK_FROM (TOK_TABREF dest1)) (TOK_INSERT (TOK_DESTINATION (TOK_DIR TOK_TMP_FILE)) (TOK_SELECT (TOK_SELEXPR (TOK_FUNCTION concat_ws (. (TOK_TABLE_OR_COL dest1) c1) (. (TOK_TABLE_OR_COL dest1) c2) (. (TOK_TABLE_OR_COL dest1) c3))) (TOK_SELEXPR (TOK_FUNCTION concat_ws ',' (. (TOK_TABLE_OR_COL dest1) c1) (. (TOK_TABLE_OR_COL dest1) c2) (. (TOK_TABLE_OR_COL dest1) c3))) (TOK_SELEXPR (TOK_FUNCTION concat_ws TOK_NULL (. (TOK_TABLE_OR_COL dest1) c1) (. (TOK_TABLE_OR_COL dest1) c2) (. (TOK_TABLE_OR_COL dest1) c3))) (TOK_SELEXPR (TOK_FUNCTION concat_ws '**' (. (TOK_TABLE_OR_COL dest1) c1) TOK_NULL (. (TOK_TABLE_OR_COL dest1) c3))))))
+
+STAGE DEPENDENCIES:
+  Stage-1 is a root stage
+  Stage-0 is a root stage
+
+STAGE PLANS:
+  Stage: Stage-1
+    Map Reduce
+      Alias -> Map Operator Tree:
+        dest1 
+          TableScan
+            alias: dest1
+            Select Operator
+              expressions:
+                    expr: concat_ws(c1, c2, c3)
+                    type: string
+                    expr: concat_ws(',', c1, c2, c3)
+                    type: string
+                    expr: concat_ws(null, c1, c2, c3)
+                    type: string
+                    expr: concat_ws('**', c1, null, c3)
+                    type: string
+              outputColumnNames: _col0, _col1, _col2, _col3
+              File Output Operator
+                compressed: false
+                GlobalTableId: 0
+                table:
+                    input format: org.apache.hadoop.mapred.TextInputFormat
+                    output format: org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat
+
+  Stage: Stage-0
+    Fetch Operator
+      limit: -1
+
+
+PREHOOK: query: SELECT concat_ws(dest1.c1, dest1.c2, dest1.c3),
+       concat_ws(',', dest1.c1, dest1.c2, dest1.c3),
+       concat_ws(NULL, dest1.c1, dest1.c2, dest1.c3),
+       concat_ws('**', dest1.c1, NULL, dest1.c3) FROM dest1
+PREHOOK: type: QUERY
+PREHOOK: Input: default@dest1
+PREHOOK: Output: file:/mnt/vol/devrs003.snc1/jonchang/trunk/build/ql/tmp/2092269896/10000
+POSTHOOK: query: SELECT concat_ws(dest1.c1, dest1.c2, dest1.c3),
+       concat_ws(',', dest1.c1, dest1.c2, dest1.c3),
+       concat_ws(NULL, dest1.c1, dest1.c2, dest1.c3),
+       concat_ws('**', dest1.c1, NULL, dest1.c3) FROM dest1
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@dest1
+POSTHOOK: Output: file:/mnt/vol/devrs003.snc1/jonchang/trunk/build/ql/tmp/2092269896/10000
+xyzabc8675309	abc,xyz,8675309	NULL	abc**8675309
